# dawww

./: .gitignore  Cargo.toml  FORMAT.md  PROJECT.md  README.md  example.daw.json  kitty_graphics_protocol.rst
crates/dawww-core/: Cargo.toml  TODO.md
crates/dawww-core/src/: instrument.rs  lib.rs  metadata.rs  pitch.rs
crates/dawww-render/: Cargo.toml
crates/dawww-render/src/: lib.rs
crates/dawww-ui/: Cargo.toml  PLAYBACK.md
crates/dawww-ui/src/: app_state.rs  components.rs  cursor.rs  draw_components.rs  drawing.rs  grid.rs  main.rs  player.rs  score.rs  score_viewport.rs  selection_range.rs  song.rs  song_file.rs  ui.rs
crates/dawww-ui/src/draw_components/: score_draw_component.rs  status_bar_component.rs
crates/sample-song-builder/: Cargo.toml
crates/sample-song-builder/src/: main.rs
sample_song/: song.daw.json
src/: app_state.rs  audio.rs  cursor.rs  draw_components.rs  lib.rs  main.rs  synth.rs  wav.rs
src/draw_components/: score_draw_component.rs  status_bar_component.rs
