[package]
name = "dawww"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DAW mixdown application"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0" 